# hugesync

./: .gitignore  Cargo.toml  NOTICE  README.md  do.txt  plan.md
.cargo/: config.toml
docs/: delta.md
src/: backup.rs  bufpool.rs  bwlimit.rs  cli.rs  config.rs  error.rs  format.rs  intern.rs  itemize.rs  lib.rs  main.rs  mmap.rs  progress.rs  resume.rs  retry.rs  s3_providers.rs  types.rs  uri.rs
src/delta/: coalesce.rs  compute.rs  mod.rs
src/signature/: file.rs  generate.rs  mod.rs
src/simd/: checksum.rs  mod.rs
src/storage/: azure.rs  gcs.rs  local.rs  mod.rs  s3.rs  ssh.rs
src/sync/: conflict.rs  delta_download.rs  delta_upload.rs  diff.rs  execute.rs  mod.rs  plan.rs  scan.rs
tests/: delta_tests.rs  integration_local.rs  integration_s3.rs
