[package]
name = "hugesync"
version = "0.0.1"
edition = "2021"
description = "A Cloud-Era Delta Synchronization Tool"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hugesync/hugesync"
keywords = ["sync", "s3", "delta", "sftp", "hsync", "hugesync", "rsync", "cloud"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "hsync"
path = "src/main.rs"

[lib]
name = "hugesync"
path = "src/lib.rs"

[dependencies]
# Core Runtime & Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"
num_cpus = "1"
rayon = "1"
bytes = "1"
dashmap = "6"  # Concurrent HashMap for parallel scanning
lasso = { version = "0.7", features = ["multi-threaded"] }  # String interning for path deduplication
crossbeam-queue = "0.3"  # Lock-free buffer pooling

# Filesystem & Walking
jwalk = "0.8"
tokio-util = { version = "0.7", features = ["codec", "io"] }
memmap2 = "0.9"
fs2 = "0.4"  # Cross-platform file locking
ignore = "0.4"

# Cloud & Network - AWS
object_store = { version = "0.13", features = ["gcp"] }
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }

# Cloud & Network - Azure (Native SDK for delta support)
azure_core = "0.30"
azure_storage = "0.21"
azure_storage_blobs = "0.21"

# HTTP Client
reqwest = { version = "0.13", features = ["json", "stream"] }
url = "2"

# Time handling (for Azure SAS tokens)
time = "0.3"

# Delta & Cryptography
fast_rsync = "0.2"
blake3 = { version = "1", features = ["rayon", "mmap"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
hex = "0.4"
base64 = "0.22"
bitcode = { version = "0.6", features = ["serde"] }  # Fast binary serialization
zstd = "0.13"  # Compression for signature files

# CLI & UX
clap = { version = "4", features = ["derive", "env"] }
indicatif = "0.18"
console = "0.16"
dialoguer = "0.12"
human_bytes = "0.4"

# Observability & Error Handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
anyhow = "1"
thiserror = "2"

# Configuration & Serialization
serde = { version = "1", features = ["derive"] }
toml = "0.9"
dirs = "6"

# SSH Support (pure Rust, cross-platform)
russh = "0.56"
russh-sftp = "2.1"
russh-keys = "0.49"
async-trait = "0.1"
whoami = "1.6"

[dev-dependencies]
tempfile = "3"
criterion = "0.8"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
